tests/Project1/student_test/test_1_s02.out
Error type A at Line 4: unknown lexeme ?
Error type A at Line 5: unknown lexeme 0xrgb
Error type B at Line 6: Missing specifier
