tests/Project1/student_test/test_1_s02.spl
int test_1_1()
{
	int i = 0;
    char c = ?;
    int a = 0xrgb;
    d = 6;
    float f = 3.25;
    if(i < 2) {
        return 1;
    }
}
